# cookiecutter-python-poetry

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.package_name }}/: .verchew.ini  Makefile  pyproject.toml
